# rust-bookshelf

./: Dockerfile  docker-compose.yml
backend/: Cargo.toml  build.rs  generate-js-package.sh
backend/js-client/: bookshelf_service_grpc_web_pb.d.ts  bookshelf_service_pb.d.ts  bookshelf_service_pb.js  package-lock.json  package.json
backend/migrations/: 20211002174538_init.up.sql
backend/proto/: bookshelf_service.proto
backend/src/: handler.rs  helpers.rs
backend/src/service/: bookshelf_service.rs  mod.rs
js-client/: bookshelf_service_grpc_web_pb.js
migrations/: 20211002174538_init.down.sql
src/: main.rs  models.rs
