[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5.2"
prost = "0.8.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls" , "postgres", "macros", "migrate", "uuid" ] }
tokio = { version = "1.12.0", features = ["full"] }
async-trait = "0.1.51"
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.5.2"